# spline-editor

./: Cargo.toml  README.md
src/: editor.rs  fs.glsl  gs.glsl  main.rs  point_fs.glsl  point_gs.glsl  point_vs.glsl  vertex.rs  vs.glsl
