[package]
name = "spline-editor"
version = "0.1.0"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
edition = "2018"

[dependencies]
cgmath = "0.17"
luminance = "0.43.1"
luminance-derive = "0.6.3"
luminance-front = "0.3.1"
luminance-glfw = "0.14.2"
luminance-windowing = "0.9.3"
glfw = "0.40"
splines = { version = "3.4.2", features = ["impl-cgmath"] }
